# StreamSTAD

./: .gitignore  README.md  pyproject.toml
configs/: wifitad_mini.yaml
docs/: FAITHFUL_REPRODUCTION.md
docs/patches/: MATR_SENSOR_INPUT.patch
scripts/: faithful_matr_smoke.py  run_experiment.py  run_faithful_matr_sensor.py  run_stadstream.py  smoke_train.py  stream_smoke.py
src/stadstream/: config.py  evaluation.py  online.py
src/stadstream/data/: stream_windows.py  wifitad.py
src/stadstream/models/: __init__.py  common.py  dpwit.py  matr_signal.py  moad_signal.py  slimstad.py  stadstream.py
src/stadstream/models/faithful_matr/: README.md  __init__.py  adapter.py  requirements.txt
src/stadstream/training/: losses.py  stadstream_loss.py
